--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -16,22 +16,29 @@
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '0' ><i class="fas fa-home me-2"></i>Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '1' ><i class="fas fa-calendar-check me-2"></i>Reservas</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '1' ><i class="fas fa-calendar-check me-2"></i>Check-in</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-cogs me-2"></i>Stock
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fas fa-layer-group me-2"></i>Productos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-door-open me-2"></i>Registro de entradas</a></li>
-          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '2'><i class="fas fa-users me-2"></i>Clientes</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-store"></i> Stock
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fa-solid fa-cart-shopping"></i> Productos</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-paste"></i> Registro de entradas</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-book"></i> Contabilidad
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fa-solid fa-arrow-right-to-bracket"></i> Entradas</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fa-solid fa-arrow-right-from-bracket"></i></i> Salidas</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-paste"></i> Informes</a></li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
