--- a/templates/inicio/dashboard.html.twig
+++ b/templates/inicio/dashboard.html.twig
@@ -167,7 +167,7 @@
                 <div class="card-body">
                     <h5 class="card-title mb-3">Reservas recientes</h5>
                     <div class="table-responsive" style="max-height: 300px; overflow-y: auto; ">
-                        <table class="table table-striped table-hover align-middle mb-0" style="min-width: 600px;">
+                        <table class="table table-striped table-hover align-middle mb-0 table-sm" style="min-width: 600px;">
                             <thead class="table-dark" style="position: sticky; top: 0; z-index: 2;">
                                 <tr>
                                     <th style="background: #212529;">#</th>
@@ -176,8 +176,8 @@
                                     <th style="background: #212529;">Fecha/Hora llegada</th>
                                     <th style="background: #212529;"># Habitaciones</th>
                                     <th style="background: #212529;">Aire</th>
-                                    <th style="background: #212529;">Empresa</th>
-                                    <th style="background: #212529;">Observaciones</th>
+                                    {#<th style="background: #212529;">Empresa</th>
+                                    <th style="background: #212529;">Observaciones</th>#}
                                     <th style="background: #212529;">Turno</th>
                                     <th style="background: #212529;">Estado</th>
                                     <th colspan="2" style="background: #212529;">Acciones</th>
@@ -193,29 +193,39 @@
                                             <td>{{ reserva.fechallegada|date('d-m-Y') }} / {{ reserva.horallegada|date('h:i a') }}</td>
                                             <td>{{ reserva.canthabitaciones }}</td>
                                             <td> {% if reserva.aire == 1 %} Si {% else %} No {% endif %} </td>                                            
-                                            <td>
+                                            {#<td>
                                                 {% if reserva.person.compania is not null %}
                                                     {{ reserva.person.compania.name }}
                                                 {% endif %}
                                             </td>
-                                            <td>{{ reserva.observaciones }}</td>
+                                            <td>{{ reserva.observaciones }}</td>#}
                                             <td>
                                                {{ reserva.turno.usuario.name }} - {{ '%05d'|format(reserva.turno.numero) }}
                                             </td>
-                                             <td>
+                                             <td style="text-align:center">
                                                 {% if reserva.status == 1 %}
-                                                    <span class="badge bg-success">Activa</span>
-                                                {% elseif room.status == 2 %}
+                                                    <span class="badge bg-success">Pendiente</span>
+                                                {% elseif reserva.status == 2 %}
                                                     <span class="badge bg-danger">Check-in</span>
+                                                {% elseif reserva.status == 3 %}
+                                                    <span class="badge bg-danger">Activa</span>
                                                 {% else %}
                                                     <span class="badge bg-warning">Cancelada</span>
                                                 {% endif %}
                                             </td>
                                             <td style="text-align:center; width: 20px;">
-                                                <i class="fas fa-check-circle text-primary" style="cursor:pointer" title="Check-in" data-action="click->sistema--app#abrirModalCheckin" data-canthabitaciones="{{ reserva.canthabitaciones }}" data-clientes='{{ clientesSelector|json_encode|e('html_attr') }}' data-habitaciones='{{ habitacionesSelector|json_encode|e('html_attr') }}' data-servicios='{{ serviciosSelector|json_encode|e('html_attr') }}'></i>
+                                                {% if reserva.status == 1 %}
+                                                    <i class="fas fa-check-circle text-primary" style="cursor:pointer; font-size: 12pt;" title="Check-in" data-action="click->sistema--app#crearCheckin" data-id="{{ reserva.id }}"></i>
+                                                {% else %}
+                                                    <i class="fas fa-check-circle" style="cursor:pointer; color: #8db0e3; font-size: 12pt;" title="Check-in"></i>
+                                                {% endif %}
                                             </td>
                                             <td style="text-align:center; width: 20px;">
-                                                <i class="fas fa-trash-restore-alt text-danger" style="cursor:pointer" title="Cancelar reserva" data-action="click->sistema--app#eliminarReserva" data-id = '{{ reserva.id }}'></i>
+                                                {% if reserva.status == 1 or reserva.status == 2  %}
+                                                    <i class="fas fa-trash-restore-alt text-danger" style="cursor:pointer; font-size: 12pt;" title="Cancelar reserva" data-action="click->sistema--app#eliminarReserva" data-id = '{{ reserva.id }}'></i>
+                                                {% else %}
+                                                    <i class="fas fa-trash-restore-alt" style="cursor:pointer; font-size: 12pt; color:#e58e96" title="Cancelar reserva"></i>
+                                                {% endif %}
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -228,8 +238,8 @@
                         </table>
                     </div>
                     <div class="mt-3 d-flex justify-content-space-between">
-                        <button type="button" class="btn btn-primary" style="margin-right:10px" data-action="sistema--app#abrirModalNuevaReserva" data-accion = '1' data-id = '0'>Nuevo</button>
-                        <a href="{{ path('app_inicio') }}" class="btn btn-danger">Regresar</a>
+                        <button type="button" class="btn btn-primary btn-sm" style="margin-right:10px" data-action="sistema--app#abrirModalNuevaReserva" data-accion = '1' data-id = '0'>Nuevo</button>
+                        <a href="{{ path('app_inicio') }}" class="btn btn-danger btn-sm">Regresar</a>
                     </div>
                 </div>
             </div>
