--- a/templates/stock/inventario.html.twig
+++ b/templates/stock/inventario.html.twig
@@ -1,10 +1,21 @@
 <turbo-frame id="frame-inventario">
-    <h5 class="card-title mb-3">Inventario</h5>
-    <div class="table-responsive">
+    <div class="row mb-3">       
+        <div class="col-12" style="display: flex; align-items: center;">
+            <h5 class="card-title mb-0">Inventario</h5>
+            <select class="form-select" style="margin-left: 20px; width: 30%;">
+                <option value="1">Todos</option>
+                <option value="2">Sin existencias</option>
+                <option value="3">Sin salidas</option>
+            </select>
+            <input class="form-control" type="text" placeholder="Buscar producto..." style="margin-left: 20px;width: 40%;border-radius: 5px 0px 0px 5px;" />
+            <button type="button" class="btn" data-action="sistema--app#abrirModalNuevoProducto" data-accion = '1' data-id = '0' style="border-radius: 0px 5px 5px 0px; background: #dee2e6;"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+    </div>
+    <div class="table-responsive" style="overflow-x:auto; max-height: 60vh; overflow-y:auto;">
         <table class="table table-striped table-hover align-middle mb-0">
-            <thead class="table-dark">
+            <thead class="table-dark" style="position: sticky; top: 0; z-index: 2;">
                 <tr>
-                    <th>Codigo</th>
+                    <th>Producto</th>
                     <th>Entradas</th>
                     <th>Salidas</th>
                     <th>Existencias</th>
@@ -13,11 +24,16 @@
             <tbody>
                 {% if inventario is not null %}
                     {% for item in inventario %}
+                        {% if item.existencias == 0 %}
+                            {% set style = 'color:red' %}
+                        {% else %}
+                            {% set style = '' %}
+                        {% endif %}
                         <tr>
-                            <td title="{{ item.codigo.nombre }}" style="text-align:right">{{ item.codigo.codigo}}</td>
-                            <td style="text-align:right">{{ item.entradas}}</td>
-                            <td style="text-align:right">{{ item.salidas}}</td>
-                            <td style="text-align:right">{{ item.existencias}}</td>
+                            <td style="{{style}}">{{ item.codigo.codigo}} - {{ item.codigo.nombre }}</td>
+                            <td style="text-align:right; {{style}}">{{ item.entradas}}</td>
+                            <td style="text-align:right; {{style}}">{{ item.salidas}}</td>
+                            <td style="text-align:right; {{style}}">{{ item.existencias}}</td>
                         </tr>
                     {% endfor %}
                 {% else %}
@@ -29,31 +45,8 @@
             </tbody>
         </table>
     </div>
-
-    <!-- Modal para registrar tipos de servicio -->
-    <div class="modal fade" id="modalNuevoTipoServ" data-sistema--app-target="modalNuevoTipoServ" tabindex="-1" aria-labelledby="modalNuevoTipoServLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title"><span data-sistema--app-target="modalTipoServLabel"></span></h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form data-sistema--app-target="formNuevoTipoServ">
-            <input type="hidden" name="id" data-sistema--app-target="idTipoServ" value="0">
-            <div class="modal-body">
-                <div class="row mb-3">
-                    <div class="col-md-12">
-                        <label for="nombreTipoServ" class="form-label" style="font-weight: bold;">Nombre</label> 
-                        <input type="text" name="nombre" class="form-control" id="nombreTipoServ" data-sistema--app-target="nombreTipoServ" placeholder="Ingrese el nombre del tipo de servicio" data-action="blur->sistema--app#validaBtnGuardarTipoServ">
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarTipoServ" data-action="sistema--app#guardarTipoServ" disabled>Guardar</button>
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-            </div>
-            </form>
-        </div>
-        </div>
+    <div class="mt-3 d-flex justify-content-space-between">
+        <button type="button" class="btn btn-primary" data-action="sistema--app#abrirModalNuevaEntrada" data-accion = '1' data-id = '0'>Nuevo</button>
     </div>
+
 </turbo-frame>
